review comment corrections and few formatting changes