@@ -1,3 +1,1 @@
 -Dcom.ibm.tools.attach.enable=yes
---add-exports=java.base/jdk.internal.vm.annotation=ALL-UNNAMED
---add-opens=java.base/jdk.internal.vm.annotation=ALL-UNNAMED
